--- a/resume/index.html
+++ b/resume/index.html
@@ -9,11 +9,14 @@
 <meta name="description" content="Download PDF LinkedIn Github gondi@usc.edu
 Education University of Southern California - Jan 2021 - Dec 2022
 Masters in Computer Science Jawaharlal Nehru Technological University - Aug 2012 - May 2016
-Bachelors in Computer Science Work Experience Stripe - Seattle, WA - May 2022 - Aug 2022
-Software Engineering Intern Worked on making Stripe APIs highly available by minimizing latencies occurring from cross-region data accesses Utilized document sharding to intelligently redistribute data across hundreds of MongoDB replsets to minimize turnaround times Decreased risk of cross-region latencies from critical collections by 85%." />
+Bachelors in Computer Science Work Experience Amazon Ads - Santa Monica, CA - Feb 2023 - Preset
+Software Development Engineer II Working on large scale services and data pipelines that support conversion measurement across Amazon&rsquo;s ecosystems. Helped bring Amazon Ads&rsquo; New-To-Consideration metrics to market." />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="/resume/" />
+
+
+  
 
 
 
@@ -46,8 +49,8 @@ Software Engineering Intern Worked on making Stripe APIs highly available by min
 <meta property="og:description" content="Download PDF LinkedIn Github gondi@usc.edu
 Education University of Southern California - Jan 2021 - Dec 2022
 Masters in Computer Science Jawaharlal Nehru Technological University - Aug 2012 - May 2016
-Bachelors in Computer Science Work Experience Stripe - Seattle, WA - May 2022 - Aug 2022
-Software Engineering Intern Worked on making Stripe APIs highly available by minimizing latencies occurring from cross-region data accesses Utilized document sharding to intelligently redistribute data across hundreds of MongoDB replsets to minimize turnaround times Decreased risk of cross-region latencies from critical collections by 85%." />
+Bachelors in Computer Science Work Experience Amazon Ads - Santa Monica, CA - Feb 2023 - Preset
+Software Development Engineer II Working on large scale services and data pipelines that support conversion measurement across Amazon&rsquo;s ecosystems. Helped bring Amazon Ads&rsquo; New-To-Consideration metrics to market." />
 <meta property="og:url" content="/resume/" />
 <meta property="og:site_name" content="Yashwanth Reddy Gondi" />
 
@@ -161,6 +164,18 @@ Software Engineering Intern Worked on making Stripe APIs highly available by min
 </ul>
 <h1 id="work-experience">Work Experience<a href="#work-experience" class="hanchor" ariaLabel="Anchor">&#8983;</a> </h1>
 <hr>
+<p><strong><a href="https://advertising.amazon.com/">Amazon Ads</a></strong> - Santa Monica, CA - Feb 2023 - Preset</p>
+<ul>
+<li>Software Development Engineer II
+<ul>
+<li>Working on large scale services and data pipelines that support conversion measurement across Amazon&rsquo;s ecosystems.</li>
+<li>Helped bring Amazon Ads&rsquo; New-To-Consideration metrics to market.</li>
+<li>Solved the problem of keeping our petabyte scale document data store up to date with global brand name changes. Utilized serverless compute to scale per demand and message queues to reduce blast radius in case of faulty data.</li>
+<li>Enabled our Brand metrics comply with EU&rsquo;s Digital Markets Act (DMA).</li>
+<li>Working on making Amazon&rsquo;s brand metrics transparent by solving the homonym problem.</li>
+</ul>
+</li>
+</ul>
 <p><strong><a href="https://stripe.com/">Stripe</a></strong> - Seattle, WA - May 2022 - Aug 2022</p>
 <ul>
 <li>Software Engineering Intern
@@ -186,28 +201,6 @@ Software Engineering Intern Worked on making Stripe APIs highly available by min
 <li>Added support for CDMI interface to Commvault’s ObjectStore. The application translates requests to and from a CDMI client to those compatible with Commvault’s ObjectStore.</li>
 </ul>
 </li>
-</ul>
-<h1 id="projects">Projects<a href="#projects" class="hanchor" ariaLabel="Anchor">&#8983;</a> </h1>
-<hr>
-<p><strong>Weenix Kernel</strong> | C, Assembly</p>
-<ul>
-<li>A non-preemptive unix-like kernel capable of running userland programs</li>
-<li>Built the scheduler, file-system and virtual memory as part of a team of 4</li>
-<li>Built it as part of the Operating Systems course at USC</li>
-</ul>
-<p><strong>Hyper-Video Player</strong> | C#, XAML</p>
-<ul>
-<li>Built an experimental video player and video editor for a type of media called hyper-media</li>
-<li>Using the editor, users can stitch videos together like they were web-pages and the player would move them through different
-videos like a browser</li>
-<li>This was the final project for the course Multimedia Systems Design at USC</li>
-</ul>
-<p><strong>Evaluating Significance of Emotion Classification in Emotion-Aware Empathetic Dialogue Systems</strong> | Python, PyTorch</p>
-<ul>
-<li>Investigated improvements on a facebook-research paper which aimed to produce empathetic responses to user dialogue
-inputs</li>
-<li>Used models like BiLSTM and Transformers not used in the original paper to evaluate the change in performance</li>
-<li>This was part if the course ”Applied Natural Language Processing” at USC</li>
 </ul>
 <h1 id="skills">Skills<a href="#skills" class="hanchor" ariaLabel="Anchor">&#8983;</a> </h1>
 <hr>
@@ -239,7 +232,7 @@ inputs</li>
   <div class="footer__inner">
     
       <div class="copyright">
-        <span>© 2022 Powered by <a href="http://gohugo.io">Hugo</a></span>
+        <span>© 2024 Powered by <a href="http://gohugo.io">Hugo</a></span>
     
         <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
       </div>
